[package]
name = "my-hacklab"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "*"
env_logger = "*"
log = "*"
structopt = "*"
tokio = { version = "0.2", features = ["full"] }
tokio-lxi = "*"

[build-dependencies]
build-data = "*"

[profile.release]
lto = true
opt-level = 3 #default
# opt-level = 'z'  # Optimize for size.

# EOF
