# Cargo.toml

[package]
name = "my_hacklab"
version = "0.3.0"
edition = "2021"
resolver = "2"


[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
lxi = "0"
num = "0"
tracing = { version = "0", features = ["log"] }
tracing-subscriber = "0"


[build-dependencies]
build-data = "0.1"


[profile.release]
lto = "fat"
opt-level = 3

# EOF
